--- a/books.org
+++ b/books.org
@@ -25,7 +25,7 @@
 
 * Computer Science
 ** Links & Resources
-- [[https://github.com/ossu/computer-science][computer-science]] - Path to a free self-taught education in Computer Science!
+- [[https://github.com/ossu/computer-science]] - Path to a free self-taught education in Computer Science!
 - [[https://teachyourselfcs.com/]] - Teach Yourself Computer Science.
 - [[https://functionalcs.github.io/curriculum/]] - A Self-Learning, Modern Computer Science Curriculum.
 - [[https://github.com/mvillaloboz/open-source-cs-degree]] - The Open Source Computer Science Degree.
