--- a/books.org
+++ b/books.org
@@ -9,17 +9,17 @@
 - David Halliday, Robert Resnick, Jearl Walker - Fundamentals of Physics: Extended
   - [[https://b-ok.asia/book/5869883/cdc926][11th Edition]]
   - [[https://b-ok.asia/book/2576616/eb8ffa][10th Edition]]
-    - [[https://b-ok.asia/book/2576628/d6e212][Solution Manual]]
+    - [[https://b-ok.asia/book/2576628/d6e212][Solutions Manual]]
 
 ** Electrodynamics
 - David J. Griffiths - Introduction to Electrodynamics
   - [[https://b-ok.asia/book/3372568/f4ed9d][4th Edition]]
-    - [[https://b-ok.asia/book/2659740/b7d0c2][Solution Manual]]
+    - [[https://b-ok.asia/book/2659740/b7d0c2][Solutions Manual]]
 
 ** Thermodynamics
 - Daniel V. Schroeder - An Introduction to Thermal Physics
   - [[https://asia1lib.vip/book/18176022/1f4179][1st Edition]]
-    - [[https://asia1lib.vip/book/5096563/70f830][Solution Manual]]
+    - [[https://asia1lib.vip/book/5096563/70f830][Solutions Manual]]
 
 ** Quantum Mechanics
 - J. J. Sakurai and Jim Napolitano - Modern Quantum Mechanics
@@ -33,7 +33,7 @@
 - Clayden - Organic Chemistry
   - [[https://asia1lib.vip/book/2821076/afa904][2nd Edition]]
     - [[https://asia1lib.vip/book/2474428/b2adae][Problems]],
-      [[https://asia1lib.vip/book/2576410/79608d][Solution Manual]]
+      [[https://asia1lib.vip/book/2576410/79608d][Solutions Manual]]
 
 * Computer Science
 ** Links & Resources
