--- a/chemistry.org
+++ b/chemistry.org
@@ -2,9 +2,9 @@
 ** Undergrad
 *** Organic
 - David Klein - Organic Chemistry as a Second Language
-  - 4th Edition - [[https://asia1lib.vip/book/2947388/7a0ef7][First Semester Topics]],
-    [[https://asia1lib.vip/book/11018462/2238ba][Second Semester Topics]]
+  - 4th Edition - [[https://b-ok.asia/book/2947388/7a0ef7][First Semester Topics]],
+    [[https://b-ok.asia/book/11018462/2238ba][Second Semester Topics]]
 - Clayden - Organic Chemistry
-  - [[https://asia1lib.vip/book/2821076/afa904][2nd Edition]]
-    - [[https://asia1lib.vip/book/2474428/b2adae][Problems]],
-      [[https://asia1lib.vip/book/2576410/79608d][Solutions Manual]]
+  - [[https://b-ok.asia/book/2821076/afa904][2nd Edition]]
+    - [[https://b-ok.asia/book/2474428/b2adae][Problems]],
+      [[https://b-ok.asia/book/2576410/79608d][Solutions Manual]]
